[package]
name = "equationx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies] # <-- We added this and everything after!
lalrpop = "0.20.0"

[dependencies]
anyhow = "1.0.80"
lalrpop-util = { version = "0.20.0", features = ["lexer", "regex", "unicode"] }
serde = "1.0.197"
