[package]
name = "equationx"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/schism-pl/equationx"
homepage = "https://github.com/schism-pl/equationx"
license = "MIT"
readme = "README.md"
description = "Library for parsing and evaluating simple mathematical expressions/equations "

[build-dependencies] 
lalrpop = "0.20.0"

[dependencies]
anyhow = "1.0.80"
lalrpop-util = { version = "0.20.0", features = ["lexer", "regex", "unicode"] }
serde = "1.0.197"
